--- a/内存马查杀/内存马.md
+++ b/内存马查杀/内存马.md
@@ -1,1 +1,173 @@
 
+
+# 内存马查杀
+
+java中比较多，
+
+   配环境 
+
+  植入哥斯拉内存马，无文件马。用脚本jsp，可以查看当前目录下是否有内存马，也只能用于一些常见传统内存马。
+
+![image-20250115111126856](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536666.png)
+
+这里植入内存马要注意：1、植入的是在进入的后门路径下 	2、密码要对应	3、连接进来的后门什么类型java，内存马也是对应的java类型
+
+![image-20250115111257532](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536667.png)
+
+自然，在对应目录下只能找到常规的后门文件，没有内存马的文件。
+
+##### 1   .jsp脚本
+
+第一个查杀内存马项目，tomcat-memshell-scanner.jsp，将这个脚本放到可能存在内存马的目录下，直接访问就可以检测出来是否存在内存马。找到添加的server  和filter两个类型内存马：
+
+![image-20250115112302534](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536668.png)
+
+但是这个脚本比较局限，一般适用于常见的内存马()和常见的框架（tomcat）：
+
+![image-20250115112512226](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536669.png)
+
+然后这个可以把内存马dump下来分析，或者直接kill掉：
+
+![image-20250115113209738](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536670.png)
+
+##### 2   arthas
+
+  另一个项目，是用来监控内存的。我们可以用它来检测内存马。  运行jar打开项目，失败可能是因为java版本问题。.\arthas-boot.jar
+
+![image-20250115113708649](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536671.png)
+
+启动jar包后会自动检测当前环境里运行的java环境，然后选择你当前需要他进行检测的java环境。
+
+1、启动jar包，发现了2个java进程，1是哥斯拉，2是tomcat，	2、那我们要检测的是tomcat下是否有内存马植入，选择2  	3、报错，java版本错误	4、更换成1.8_291重启启动成功：
+
+![image-20250115113958531](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536672.png)
+
+查看url路由，（找Servlet内存马），因为正常来说，路由有的，你目录下也是有对应的路径的，但是内存马就是有路由，但是目录下没有对应文件。但是这里好像只能识别出servlet型的
+
+一些简单使用的命令。
+
+这里用查看URL路由，发现了servlet型的内存马：
+
+![image-20250115150650294](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536673.png)
+
+ 利用sc命令，查看JVM 已加载的类信息，反编译指定已加载类的源码或者直接下载下来分析。
+
+sc查看JVM 已加载的类信息，然后配合经验或者刚才的脚本来找到哪个可能是内存马调用的java类、通过搜索发现里面的node.BaseJsonNode不是系统自带的，怀疑可能是：
+
+![image-20250115163035177](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536674.png)
+
+jad反编译指定已加载类的源码、进一步分析：
+
+![image-20250115175326646](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536675.png)
+
+dump下来目标class文件：
+
+![image-20250115175555471](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536676.png)
+
+打开class（idea或者jadx-gui）打开发现一些哥斯拉的特征。什么连接方式，AES_BASE64、连接密码等这些信息：或者就直接复制粘过去让gpt分析一下：
+
+![image-20250115175837342](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536677.png)
+
+  找servlet ，拿到class文件后分析：
+
+![image-20250115181010544](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536678.png)
+
+下来还可以将dump下来的class文件打开，保存到java格式、上传微步分析：
+
+![image-20250115181657127](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536679.png)
+
+  许少的工具，查找内存马工具
+
+但是这些还是有局限，只能查杀部分类型的内存马。
+
+![image-20250115184540712](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536680.png)
+
+  还可以通过日志发现：当本地路径中没有这个文件，但是你的访问路径（攻击者访问）有这个文件，而且的状态是200的post请求，那么就怀疑这里是不是有内存马。
+
+![image-20250115192146605](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536681.png)
+
+https://github.com/Getshell/Mshell
+
+# 内存马2
+
+  listener 框架的后门      哥斯拉不支持linstener的内存马，可以用脚本或者工具植入。查杀还是用项目arthas-bin，就是需要将查找语法自己写。
+
+##### listener
+
+使用jar包工具生成listener内存马：
+
+![image-20250116110616219](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536682.png)
+
+然后访问就植入了：
+
+![image-20250116110922433](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536683.png)
+
+listen.jsp内存马：
+
+![image-20250116111137313](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536684.png)
+
+然后查杀就可以用上面的脚本，也可以用其他几个都行。
+
+中间件内存马：
+
+![image-20250116114604021](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536685.png)
+
+  
+
+##### tomcat valve        
+
+![image-20250116112427486](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536686.png)
+
+中间的路径都行asd?
+
+![image-20250116112541712](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536687.png)
+
+查杀：
+
+gui和arthas都可以查杀、jsp脚本就在这儿用不了了：
+
+![image-20250116112805330](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536688.png)
+
+这里还有一个项目，也可以查杀，但是不如arthas，因为他是将所有结果放到txt里让你自己分析，没有自动匹配：
+
+![image-20250116113306386](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536689.png)
+
+##### spring
+
+框架型内存马：
+
+![image-20250116114548480](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536690.png)
+
+  spring boot  框架       先不考虑如何植入的，是用代码进行植入的。访问对应地址就会触发内存马。----小翻车  jar包有问题，用idea启动环境。              gui是查不出来这类内存马的，用cop或者arthas两个项目进行查杀，推荐还是用alibaba的arthas进行查杀
+
+至于这里具有为什么访问那个路径就植入内存马（spring boot 型），为什么访问参数是cmwpzz，那都是得看源码，他是放到源码了，然后给你打包jar包让你直接运行了：
+
+![image-20250116114133081](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536691.png)
+
+这里还是推荐arthas，但是缺点也很明显，就是查找语法你得自己找，找到正确的，然后那个cop的jar包也可以找到， 只是需要自己找。
+
+  使用arthas进行语法搜索，因为你是作为蓝队，那么是自己当前的环境肯定是知道的，为spingboot框架的，那spingboot根据资料，就那3种类型：SpringController、SpringInterceptor、Spring Webflux         那就根据这个类型进行语法筛选：
+
+![image-20250116115543853](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536692.png)
+
+SpringInterceptor：
+
+![image-20250116115657185](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536693.png)
+
+找到后在jar包中将对应的class文件删除（删除内存马）
+
+![image-20250116152315063](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536694.png)
+
+##### webflux 
+
+ webflux        ，内存马已经植入了（运行网页时候就植入了），什么路径都可以进入：
+
+![image-20250116152558425](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536695.png)
+
+内存马也是写到里面的class文件，这个查杀时候，需要用到关键字筛选memshell shell os  runtime都是一些java代码rce的关键字，需要区分大小写：
+
+![image-20250116153320803](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536696.png)
+
+
+
+这里查杀时候，主要还是查找语法，有的基于内存马固定后缀，名字，文件中的一些可疑关键字来查找。
