--- a/流量分析/c2流量.md
+++ b/流量分析/c2流量.md
@@ -1,1 +1,118 @@
+# 流量分析
+
+c2远控
+
+![image-20250124145252300](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536780.png)
+
+Vshell在今年24hw比较流行
+
+#### cs：
+
+​    http
+
+将数据包导出来用脚本工具解析，成功后就可以确认为cs后门。下面是cs--http的3个特征
+
+http后门上线，首先就是固定的数据包头：
+
+![image-20250124180959269](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536781.png)
+
+还有就是checksum8算法，64位后门对应93、32位的后门对应结果为92：
+
+![image-20250124181231154](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536782.png)
+
+还可以对数据包进行解析，成功解析cs的心跳包：
+
+![image-20250124181832077](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536783.png)
+
+
+
+ https  是经过加密的，数据包内容是加密的。 看TLS协议的包，然后找两个hello的包。 ja3和ja3s 的值，每个cs版本里的都是固定的，版本不同值不同。这里都是通过对比ja3和ja3s 的值来判断是否为恶意软件。还有一个是其默认引用的证书特征。
+
+抓https后门上线的数据包，找2个hello：
+
+当然每一个cs版本不同，对应的ja3和ja3s的值不同
+
+![image-20250124183012736](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536784.png)
+
+将数据包导出https.pcapng。然后用脚本工具可以找到里面的ja3，那么av查杀也是这样找到对应的ja3进而锁定是cs后门。就是将ja3 ja3s值整合一起到库里来检测。
+
+![image-20250124185827072](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536785.png)
+
+
+
+#### msf
+
+  --------   msf的shell数据包是明文传输：
+
+![image-20250124194900934](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536786.png)
+
+
+
+  msf-http	特征：
+
+![image-20250124201853307](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536787.png)
+
+有固定数据包头，get后的路径是随机的，长度也随机：
+
+![image-20250124201926481](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536788.png)
+
+混淆上面的MZ文件头：
+
+![image-20250124202016333](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536789.png)
+
+  msf --https              自然，这里的ja3 ja3s也和msf版本有关。
+
+![image-20250124221041333](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536790.png)
+
+#### sliver
+
+[新型渗透工具Sliver的流量特征分析与检测 (qq.com)](https://mp.weixin.qq.com/s/G3ggCKxQy0nOqRuTUPHfiQ)
+
+ 	sliver-http
+
+[奇安信攻防社区-红队工具研究篇 - Sliver C2 (butian.net)](https://forum.butian.net/share/2243)	sliver使用
+
+先在这儿把自己的ip填进去门后面还有个log文件存储地址也需要改一下：
+
+![image-20250127123949034](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536791.png)
+
+先生成windows后门-http的：
+
+![image-20250124222142266](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536792.png)
+
+上线：
+
+![image-20250124222651695](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536793.png)
+
+捕获流量特征：
+
+![image-20250124223615432](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536794.png)
+
+可以看到在sliver源码cookie库和路径库中都有对应的：
+
+![image-20250124224127356](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536795.png)
+
+根据路径文件名，后缀，cookie这些信息到源码里面的数组随机组合配合分析排查：
+
+![image-20250124231100390](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536796.png)
+
+然后就通过这几个条件来满足sliver--http的规则
+
+ sliver-https
+
+生成https的后门，监听，上线：
+
+![image-20250124232205493](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536797.png)
+
+将抓到的流量包还是用工具找出ja3和ja3s
+
+![image-20250124231934786](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536798.png)
+
+和文章[新型渗透工具Sliver的流量特征分析与检测 (qq.com)](https://mp.weixin.qq.com/s/G3ggCKxQy0nOqRuTUPHfiQ)分析出来的值一样：
+
+![image-20250124232053409](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536799.png)
+
+找到这些流量特征后就直接写到自己的edr中：
+
+![image-20250124232426856](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536800.png)
 
