--- a/反制红队/陷阱.md
+++ b/反制红队/陷阱.md
@@ -1,1 +1,113 @@
+#反制
+
+蜜罐  在txt中写一些目录，为一些身份信息指纹的存储路径， 
+
+  启动蜜罐，py2版本。开一个3306的sql服务，诱使红队连接。
+
+蓝队人员主动打开一个3306端口，诱导红队连接：
+
+![image-20250207171159978](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536868.png)
+
+红队尝试连接后，蓝队这边就成功读取到了目标文件：
+
+![image-20250207171324954](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536869.png)
+
+其中.aggressor.prop是红队cs的默认存储连接过的ip信息密码。
+
+![image-20250207171434641](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536870.png)
+
+这种还有交互式的：
+
+![image-20250207172541676](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536871.png)
+
+#### 伪装源码泄露：
+
+##### calc
+
+  calc.exe       伪装源码泄露、让红队进行审计打开源码上钩：
+
+蓝队配置、制作鱼饵：
+
+![image-20250208155913254](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536872.png)
+
+然后蓝队将改好的鱼饵用脚本工具搭建起来、先将idea放到工具目录里，在打开一个web服务，带有源码泄露的一个漏洞，后台www.zip下。制作的页面实战中还是需要进行渲染：
+
+![image-20250208161258036](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536873.png)
+
+calc.exe    不是clac，所以第一次翻车了。
+
+红队将www.zip解压用idea打开，注意，这里只针对jer系列的产品打开，比如用记事本打开就不会执行隐藏的鱼饵，用idea打开后发现执行calc，实战不仅要将页面做好看点，也需要将源码等放进来，让其下载解压打开是源码的格式，不是像现在这个里面只有.idea文件：
+
+![image-20250208162255010](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536874.png)
+
+##### 1.exe
+
+-------- 利用idea的shell script调试，做一个网站源码，里面带有后门。让红队找到网站源码，用idea打开网址源码的时候会执行我们在源码里放的后门。\
+
+1、制作1.exe后门鱼饵，2、检查好配置 	3、将做好的放到工具目录下
+
+![image-20250208165458153](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536875.png)
+
+诱导红队下载存在后门的zip，让其用idea打开进行代码审计：
+
+![image-20250208165821502](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536876.png)
+
+红队然后将下载的zip解压，用idea打开：第一次打开有警告，实战中做好后门免杀就行，
+
+红队第二次打开就直接上线了。主要是 .idea文件，里面配置。
+
+![image-20250208165937183](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536877.png)
+
+  重写做一份
+
+
+
+#### 蚁剑
+
+  反制蚁剑，对版本有限制。修改红队的后门代码，将红队权限反弹回来。
+
+![image-20250208184640091](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536878.png)
+
+先用蚁剑连接上：
+
+![image-20250208191907995](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536879.png)
+
+然后通过蓝队排查，发现了蚁剑后门文件，对其进行反制。
+
+通过修改后门shell，让其反弹权限：
+
+![image-20250208192843191](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536880.png)
+
+将更改后的代码替换蚁剑后门，在监听反弹端口。然后当红队在用蚁剑尝试连接时候，就会反弹shell回来：
+
+![image-20250208193129293](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536881.png)
+
+#### sqlmap
+
+   鸡肋，只能用linux的sqlmap进行攻击，利用的是linux的sqlmap在注入网站时候后面如果有参数，可以执行参数命令，我们就是让这里执行我们的反弹命令。
+
+![image-20250208194101601](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536882.png)
+
+这里先做一个提交表单的页面，诱导其对提交框进行sql注入，然后正常思路，红队对其提交数据抓包、对抓包参数进行sql注入：
+
+![image-20250208195136958](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536883.png)
+
+这里后面参数是base64加密的反弹shell命令，看着还是比较明显的，红队不会傻到看不出来，但是实战你需要多层加密，自己想办法让其变得真一点，还有这个提交表单的页面，也需要改一下（好看逼真点）：
+
+![image-20250208195357290](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536884.png)
+
+红队对提交的参数进行测试，使用的是linux的sqlmap。蓝队进行监听：
+
+![image-20250208195518341](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536885.png)
+
+ goby
+
+制作一个网页，当红队用goby扫的时候会发现漏洞：
+
+![image-20250208201045854](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536886.png)
+
+然后用goby扫后查看结果时候一点开就会执行我们的命令：
+
+![image-20250208201335901](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536887.png)
+
 
