--- a/反制红队/反制.md
+++ b/反制红队/反制.md
@@ -1,1 +1,87 @@
 
+
+# 反打红队
+
+反制是溯源之后的
+
+#### 反制cs
+
+批量上线    、条件：知道对方的CS的服务端地址，开启了http监听器
+
+   批量上线  需要解密流量包中的cookie的值，找到里面的公钥信息，用一个脚本实现批量发包，让对方（红队）cs批量上线大量机器。
+
+得不到公钥的话只能上线一个机器。
+
+##### 批量上线
+
+欺骗防御，先用没有得到公钥的cookie进行发包，找到有cookie头的cs上线数据包：
+
+![image-20250209122851677](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536888.png)
+
+然后用发包工具发包，其中对应头的值，发现只能上线一次，不能实现发多次包上线多次：
+
+![image-20250209123133996](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536889.png)
+
+![image-20250209123252690](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536890.png)
+
+所以需要用得到正确的公钥加密成正确的cookie进行多次发包：
+
+解密cookie并找到公钥：1、先 找到后门地址  	2、下载后门文件 	3、解密其中的cookie	4、解密后的转为json格式的文件查看     这里出来的是解密后的cookie
+
+![image-20250209130844990](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536891.png)
+
+然后再找到cookie里面的公钥：
+
+![image-20250209131048603](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536892.png)
+
+将得到的公钥存到准备批量发包工具下的对应txt文件中，这里面其他txt文件是cs上线后的对应一些用户，计算机，进程的信息：
+
+![image-20250209131229909](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536893.png)
+
+进行批量发包10次，这里主要c2的URL不要写成后门地址，可以看到cs上线10台，这里面上线的用户，计算机，进程等信息都可以在上面的txt文件中修改。主要是公钥和cs的url。
+
+![image-20250209131400336](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536894.png)
+
+##### 2：爆破密码
+
+ 条件 ： 知道对方的CS的服务端地址---------前面溯源到的。
+
+在通过端口扫描扫出来cs的端口。然后用脚本爆破cs的密码。
+
+![image-20250209183139690](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536895.png)
+
+##### 3、cve 
+
+  内置漏洞 ，条件：机器被CS控制的木马程序 Cobalt Strike <=4.7 XSS 操作过进程管理
+
+将两个文件放到一个网站目录下，下来就用cve脚本进行。运行后红队会上线蓝队操作的机器，只要红队查看目标进程列表，那么红队机器就会执行前面两个文件里的rce。
+
+将程序打包成jar包，让红队弹计算器：
+
+![image-20250209190904389](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536896.png)
+
+
+
+这里用脚本进行上线：
+
+![image-20250209191239995](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536897.png)
+
+然后只要一点击进程列表，那么红队的权限就反弹回来，这里是弹的计算器：
+
+![image-20250209191047069](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536898.png)
+
+##### 4、旁站反制
+
+ ![image-20250209191553847](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536899.png)
+
+就是你找到了c2服务器的ip，还可以在其服务器上发现有没有其他的服务，比如一般来说会配合着nps这种内网工具，那么我们可以打nps达到反制红队：
+
+这里演示是随便找一个nps服务：1、登录页面抓包 	2、使用bp自带插件直接进入nps	3、放包刷新直接进去
+
+![image-20250209192831804](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536900.png)
+
+钓鱼：
+
+ 
+
+![image-20250209193003314](https://cdn.jsdelivr.net/gh/maybeyjb/blue-team/img/202506161536901.png)
